--- a/settings.yml
+++ b/settings.yml
@@ -14,11 +14,11 @@ align_center_text:
   default: "Text"
   description:
     en: Enter the placeholder text that appears in the composer after the user clicks the button.
-align_right_button:
-  default: "Align right"
+align_left_button:
+  default: "Align left"
   description:
     en: Enter the text for the title of the button in the composer.
-align_right_text:
+align_left_text:
   default: "Text"
   description:
     en: Enter the placeholder text that appears in the composer after the user clicks the button.
@@ -42,6 +42,6 @@ strikethrough_prompt:
 Svg_icons: 
   type: 'list'
   list_type: 'compact'
-  default: 'fa-align-center|fa-align-right|fa-align-justify|fa-strikethrough|fa-underline'
+  default: 'fa-align-center|fa-align-left|fa-align-justify|fa-strikethrough|fa-underline'
   description: 
     en: "Include FontAwesome 5 icon classes for each icon used in the list."
